After creating the project Structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 
+servicename=erise
+server.servlet.context-path=/Student
+spring.application.name=erise
+
+## spring boot tomcat configuration
+#JAVA_OPTS=-Xms2g -Xmx2g
+server.port=8080
+server.host=localhost
+hostidentifier=localhost:8080
+server.tomcat.basedir=erise/target
+server.tomcat.max-connections=100
+server.tomcat.max-threads=10
+server.tomcat.min-spare-threads=5
+
+# logging
+LOG4J_HOME=erise/target/logs
+logging.level.org.springframework.data=INFO
+
+# service database
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.database=Student
+
+resource.bundle.file.path=
